tests/fixtures/sample-js-project-positive/shared/utils/src/errors/catch-e962b815.ts
export async function fn_e962b815(): Promise<void> {
  try {
    throw new Error("oops");
  } catch (e) {
    console.error(e);
  }
}
